<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="10dp"
card_view:cardBackgroundColor="@color/colorPrimaryDark"
card_view:cardCornerRadius="4dp"
card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@drawable/clothing2"
        android:id="@+id/layoutCard"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#CCFFFFFF"
            card_view:layout_constraintBottom_toBottomOf="@+id/tvPrice"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/cbItem"
            card_view:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/cbItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/colorPrimaryDark"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/btnDelete"
            card_view:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="109dp"
            android:layout_height="37dp"
            android:text="@string/price"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            card_view:layout_constraintStart_toEndOf="@+id/tvDollarSign"
            card_view:layout_constraintTop_toBottomOf="@+id/cbItem" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/colorPrimaryDark"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDollarSign"
            android:layout_width="46dp"
            android:layout_height="37dp"
            android:gravity="right"
            android:text="@string/dollarsign"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cbItem" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>